--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             <span class="section-subtitle about__initial">Feira de Profissões 2014</span>
             <h2 class="section-title about__initial">Nossa História</h2>
             <p class="about__description">
-                Em 2014 a Escola Estadual Professor Ernani Rodrigues promoveu um evento inedito na cidade. 
+                Nos dias  17 e 18 de Setembro de 2014 A Escola Estadual Professor Ernani Rodrigues promoveu um evento inedito na cidade. 
                 Com o Objetivo de orientar os alunos a escolha na sua Profissão.
             </p>
             <a href="./source/components/about.html" class="button"
               >Veja mais</a
             >
           </div>
-          <img src="./source/images/jornal.jpg" class="about__img" />
+          <img src="./source/images/news.jpg" class="about__img" />
         </div>
       </section>
       <section class="representative section bd-container" id="representative">
