--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             </div>        
           <video autoplay muted loop src="./source/images/ernani.mp4"></video>         
         </div>
-        <div class="links">
           <a href="#about" class="button">Explorar &#8594;</a>
-      </div>
       </section>
       <section class="about section bd-container" id="about">
         <div class="about__container bd-grid">
@@ -90,6 +88,53 @@
           <img src="./source/images/news.jpg" class="about__img" />
         </div>
       </section>
+
+      <section class="guide section bd-container" id="guide">
+      <div class="guide__container bd-grid">
+        <h4 class="sectionSubtitle bold-color">Programação</h4>
+        <h3 class="sectionTitle">Feira de Profissões Ernani Rodrigues 2024</h3>
+            <div class="days">
+              <div class="day actives" data-day="wed">
+                  <p class="contentText">
+                      <strong>Quarta-Feira<br>
+                          18/09</strong>
+                  </p>
+              </div>
+              <div class="day" data-day="thu">
+                  <p class="contentText">
+                      <strong>Quinta-Feira<br>
+                          19/09</strong>
+                  </p>
+              </div>
+          </div>
+          <div class="details">
+            <div id="wed" class="actives">
+                <div class="contentText">
+                    <p><strong class="bold-color">07:00</strong>  &#8211; Abertura da Feira</p>
+                    <p>&nbsp;</p>
+                    <p><strong class="bold-color">11:30 </strong>&#8211; Evento Unimar </p>
+                    <p>&nbsp;</p>
+                    <p><strong class="bold-color">15:30 </strong>&#8211; Fema Apresentação</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div id="thu" >
+                <div class="contentText">
+                    <p><strong class="bold-color">08:00 </strong>&#8211; Abertura da Feira</p>
+                    <p>&nbsp;</p>
+                    <p><strong class="bold-color">11:00</strong> &#8211; Chegada de Alunos escolas de fora</p>
+                    <p>&nbsp;</p>
+                    <p><strong class="bold-color">15:00</strong> &#8211; Chegada dos pais de alunos visitantes</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+        </div>
+      </div>
+      </section>
+
       <section class="representative section bd-container" id="representative">
         <div class="representative__container bd-grid">
           <div class="representative__data">
@@ -180,8 +225,9 @@
     <script src="./source/javascript/index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./source/javascript/sr.js"></script>
-    <script src="https://unpkg.com/jquery@3.6.1/dist/jquery.js"></script>
+    <script src="https://unpkg.com/jquery@3.7.1/dist/jquery.js"></script>
     <script src="/source/javascript/scrollup.js"></script>
     <script src="./source/javascript/countdown.js"></script>
+    <script src="/source/javascript/guide.js"></script>
   </body>
 </html>
