Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h4 class="sectionSubtitle bold-color">Programação</h4>
         <h3 class="sectionTitle">Feira de Profissões Ernani Rodrigues 2024</h3>
             <div class="days">
-              <div class="day actives" data-day="wed">
+              <div class="day active" data-day="wed">
                   <p class="contentText">
                       <strong>Quarta-Feira<br>
                           18/09</strong>
@@ -108,7 +108,7 @@
               </div>
           </div>
           <div class="details">
-            <div id="wed" class="actives">
+            <div id="wed" class="active">
                 <div class="contentText">
                     <p><strong class="bold-color">07:00</strong>  &#8211; Abertura da Feira</p>
                     <p>&nbsp;</p>
