--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
     <script src="./source/javascript/index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./source/javascript/sr.js"></script>
-        <script src="https://unpkg.com/jquery@3.6.1/dist/jquery.js"></script>
-    <script src="/source/javascript/scrollup.js"></script>
+        <script src="https://unpkg.com/jquery@3.7.1/dist/jquery.js"></script>
+    <script src="./source/javascript/scrollup.js"></script>
     <script src="./source/javascript/countdown.js"></script>
-    <script src="/source/javascript/guide.js"></script>
+    <script src="./source/javascript/guide.js"></script>
   </body>
 </html>
