--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         <h4 class="sectionSubtitle bold-color">Programação</h4>
         <h3 class="sectionTitle">Feira de Profissões Ernani Rodrigues 2024</h3>
             <div class="days">
-              <div class="day active" data-day="wed">
+              <div class="day " data-day="wed">
                   <p class="contentText">
                       <strong>Quarta-Feira<br>
                           18/09</strong>
                   </p>
               </div>
-              <div class="day" data-day="thu">
+              <div class="day active" data-day="thu">
                   <p class="contentText">
                       <strong>Quinta-Feira<br>
                           19/09</strong>
@@ -108,7 +108,7 @@
               </div>
           </div>
           <div class="details">
-            <div id="wed" class="active">
+            <div id="wed">
                 <div class="contentText">
                     <p><strong class="bold-color">07:00</strong>  &#8211; Abertura da Feira</p>
                     <p>&nbsp;</p>
@@ -119,7 +119,7 @@
                     <p>&nbsp;</p>
                 </div>
             </div>
-            <div id="thu" >
+            <div id="thu" class="active" >
                 <div class="contentText">
                     <p><strong class="bold-color">08:00 </strong>&#8211; Abertura da Feira</p>
                     <p>&nbsp;</p>
@@ -150,7 +150,7 @@
             <a
               href="#"
               class="button"
-              >BOTAO</a
+              >EM BREVE/a
             >
           </div>
           <img
@@ -165,7 +165,7 @@
                 <h2 class="section-title contact__initial">Mapa Virtual 2024</h2>
                 <p class="contact__description">Venha conferir o mapa da nossa edição!</p>
             </div>
-            <div class="contact__button"> <a href="./support.html" class="button">Veja o Mapa! </a> </div>
+            <div class="contact__button"> <a href="./support.html" class="button">EM BREvE </a> </div>
         </div>
     </section>
     <footer class="footer section bd-container">
