--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
             <a
               href="#"
               class="button"
-              >EM BREVE/a
-            >
+              >EM BREVE</a>
           </div>
           <img
             src="./source/images/6273e84317.webp"
