Timer and about

--- a/index.html
+++ b/index.html
@@ -150,13 +150,31 @@
             <a
               href="#"
               class="button"
-              >EM BREVE</a>
+              style="cursor: not-allowed;"
+              >Em Breve!</a>
           </div>
           <img
-            src="./source/images/6273e84317.webp"
+            src="./source/images/shirtlie.png"
             class="representative__img"
           />
         </div>
+        <div class="countdown-shirt">
+          <div >
+            <h1 id="dias-shirt">00</h1>
+            <p>Dias</p>
+          </div>
+          <div>
+            <h1 id="horas-shirt">00</h1>
+            <p>Horas</p>
+          </div>
+          <div>
+            <h1 id="minutos-shirt">00</h1>
+            <p>Minutos</p>
+          </div>
+          <div>
+            <h1 id="segundos-shirt">00</h1>
+            <p>Segundos</p>
+          </div>        
       </section>
      <section class="contact section bd-container" id="contact">
         <div class="contact__container bd-grid">
@@ -164,7 +182,7 @@
                 <h2 class="section-title contact__initial">Mapa Virtual 2024</h2>
                 <p class="contact__description">Venha conferir o mapa da nossa edição!</p>
             </div>
-            <div class="contact__button"> <a href="./support.html" class="button">EM BREvE </a> </div>
+            <div class="contact__button"> <a href="./support.html" class="button"  style="cursor: not-allowed;">Em Breve</a> </div>
         </div>
     </section>
     <footer class="footer section bd-container">
@@ -221,12 +239,8 @@
         <p class="footer__copy"><b>&#169;</b> 2024 Escola Ernani Rodrigues. <b>Todos os direitos reservados.</b></p>
     </footer>
     </main>
-    <script src="./source/javascript/index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="./source/javascript/sr.js"></script>
         <script src="https://unpkg.com/jquery@3.7.1/dist/jquery.js"></script>
-    <script src="./source/javascript/scrollup.js"></script>
-    <script src="./source/javascript/countdown.js"></script>
-    <script src="./source/javascript/guide.js"></script>
+   <script src="/source/javascript/main.js"></script>
   </body>
 </html>
