--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
     </main>
     <script src="https://unpkg.com/scrollreveal"></script>
         <script src="https://unpkg.com/jquery@3.7.1/dist/jquery.js"></script>
+        <script src="./source/javascript/header.js"></script>
    <script src="./source/javascript/index.js"></script>
   </body>
 </html>
